skill event unit tests